<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/parent2">
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:src="@drawable/ic_support"
        android:id="@+id/floating1">
    </com.google.android.material.floatingactionbutton.FloatingActionButton>
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/parent3">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/parent1">
            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@mipmap/ic_launcher"
                android:layout_marginLeft="50dp"
                android:layout_marginVertical="50dp"
                android:id="@+id/img1">
            </ImageView>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="222dp"
                android:layout_marginVertical="100dp"
                android:text="@string/pickimage"
                android:id="@+id/btn1">
            </Button>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/Name"
                android:layout_marginVertical="250dp"
                android:layout_marginLeft="20dp"
                android:id="@+id/edit1">
            </EditText>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="300dp"
                android:layout_marginLeft="20dp"
                android:hint="@string/username"
                android:id="@+id/editusername">
            </EditText>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/confirmusername"
                android:layout_marginVertical="350dp"
                android:layout_marginLeft="20dp"
                android:id="@+id/editusername1">
            </EditText>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/Password"
                android:layout_marginVertical="420dp"
                android:layout_marginLeft="20dp"
                android:inputType="textPassword"
                android:id="@+id/eidtpassword">
            </EditText>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/confirmpassword"
                android:layout_marginVertical="470dp"
                android:layout_marginLeft="20dp"
                android:inputType="textPassword"
                android:id="@+id/editpassword1"
                >
            </EditText>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/Email"
                android:layout_marginVertical="540dp"
                android:layout_marginLeft="20dp"
                android:id="@+id/editemail">
            </EditText>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/cofirmeemail"
                android:layout_marginVertical="590dp"
                android:layout_marginLeft="20dp"
                android:id="@+id/editemail1">
            </EditText>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:layout_marginVertical="650dp"
                android:layout_marginLeft="20dp"
                android:textStyle="bold"
                android:id="@+id/text1">
            </TextView>
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="670dp"
                android:id="@+id/radiogroup"
                android:layout_marginLeft="20dp"
                android:orientation="horizontal">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male"
                    android:id="@+id/radiobtn1">
                </RadioButton>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:text="@string/female"
                    android:id="@+id/radiobtn2">
                </RadioButton>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:text="@string/other"
                    android:id="@+id/radiobtn3">
                </RadioButton>
            </RadioGroup>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/country"
                android:layout_marginVertical="730dp"
                android:layout_marginLeft="20dp"
                android:textStyle="bold"
                android:id="@+id/text2">
            </TextView>
            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="750dp"
                android:layout_marginLeft="20dp"
                android:entries="@array/country1"
                android:id="@+id/spinner1">
            </Spinner>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/licence_agreeement"
                android:layout_marginVertical="800dp"
                android:textSize="20sp"
                android:layout_marginLeft="20dp"
                android:id="@+id/text3">
            </TextView>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="I agree"
                android:layout_marginVertical="820dp"
                android:layout_marginLeft="20dp"
                android:id="@+id/check1">
            </CheckBox>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginVertical="870dp"
                android:text="@string/register"
                android:id="@+id/btn2">
            </Button>
        </RelativeLayout>
    </ScrollView>


</RelativeLayout>